@@ -1,3 +1,3 @@
 <P>
-No file you choosed can be uploaded because they would overwrite locked files.
+No file you choosed can be uploaded because they would overwrite other files and it is forbidden.
 </P>
