@@ -1,3 +1,3 @@
 <P>
-Aucun fichier ne peut être enregistré sur le serveur car ils auraient écrasé des fichiers en cours d'édition.
+Aucun fichier ne peut être enregistré sur le serveur car ils auraient tous remplacés des fichiers de même nom. Vous n'avez pas cette autorisation.
 </P>
