@@ -1,0 +1,6 @@
+<P>
+These files already exist and you don't have the right to override them. They won't be uploaded: [NAME]
+</P>
+<P>
+Please change their name on your computer and upload them again.
+</P>
