@@ -10,7 +10,7 @@
   </parent>
   <groupId>ch.ivyteam.ivy.addons</groupId>
   <artifactId>ch.ivyteam.ivy.addons</artifactId>
-  <version>6010000.0.0-SNAPSHOT</version>
+  <version>6010100.0.0-SNAPSHOT</version>
   <packaging>iar</packaging>
   <name>IvyAddOns</name>
   <description>This library contains various add-on components and helper artifacts to use in Xpert.ivy projects. 
